Add latlng test, fix distance error, more robust tests for city optimizer